# eres-os

./: .gitignore  Cargo.toml  NEXT_STEPS.md  PROJECT_STRUCTURE.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: docs-pages.yml
boot/: boot.S  stage2.S
crates/simplefs-core/: Cargo.toml
crates/simplefs-core/src/: lib.rs
crates/simplefs-tool/: Cargo.toml
crates/simplefs-tool/src/: lib.rs  main.rs
docs/: github-pages.md
fs/root/: motd.txt  readme.txt  version.txt
scripts/: build_image.sh  run_qemu.sh  test_commands.sh  test_qemu_commands.sh
src/: lib.rs  main.rs  panic_handler.rs  shell.rs
src/arch/: mod.rs  x86_64.rs
src/arch/x86_64/: interrupts.rs  io.rs  keyboard.rs  pic.rs  pit.rs
src/console/: debugcon.rs  mod.rs  vga.rs
src/fs/: mod.rs  simplefs.rs  vfs.rs
src/memory/: bootinfo.rs  frame_allocator.rs  heap.rs  mod.rs  vm.rs
src/storage/: ata_pio.rs  block.rs  cache.rs  error.rs  mod.rs
