[package]
name = "eres-os"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/simplefs-core",
    "crates/simplefs-tool",
]

[lib]
crate-type = ["staticlib"]

[features]
default = []
qemu-test = []

[dependencies]
simplefs-core = { path = "crates/simplefs-core", default-features = false }

[dev-dependencies]
simplefs-tool = { path = "crates/simplefs-tool" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
